git-svn-id: file:///var/svn/claro-catalog@603 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/war/CatalogManager.css
+++ b/trunk/catalog-manager/war/CatalogManager.css
@@ -665,6 +665,18 @@ table.filterpanel input.gwt-TextBox { margin-right: 40px; }
 	color: gray;
 }
 
+/** Taxonomy Page */
+
+.ee-MasterDetailTable .categoryNewSubCategory {
+	font-style: italic;
+	margin-left: 30px;
+	visibility: hidden;
+}
+
+.ee-MasterDetailTable tr:hover .categoryNewSubCategory {
+	visibility: visible;
+}
+
 /** Categories component */
 .categoryStyle {
 	margin-left: 10px;
