git-svn-id: file:///var/svn/claro-catalog@606 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/war/CatalogManager.css
+++ b/trunk/catalog-manager/war/CatalogManager.css
@@ -500,8 +500,11 @@ table.filterpanel input.gwt-TextBox { margin-right: 40px; }
 	margin: 20px;
 }
 
-.productDetails .productname {
+.categoryDetails .categoryname.gwt-TextBox {
 	font-size: large;
+	font:normal 22px/1.2em Arial, Helvetica, Lucida, sans-serif;
+	letter-spacing:-1px;
+	
 }
 
 
