git-svn-id: file:///var/svn/claro-catalog@610 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/war/CatalogManager.css
+++ b/trunk/catalog-manager/war/CatalogManager.css
@@ -769,3 +769,11 @@ table.filterpanel input.gwt-TextBox { margin-right: 40px; }
 .ImportMainPanel .statusTable img {
 	padding-top: 4px;
 }
+
+.MultiFileImportPanel .ee-FormTable {
+	height: 120px;
+}
+
+.ImportDataMappingPanel .ee-FormTable {
+	height: 80px;
+}	
