git-svn-id: file:///var/svn/claro-catalog@611 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/war/CatalogManager.css
+++ b/trunk/catalog-manager/war/CatalogManager.css
@@ -670,6 +670,9 @@ table.filterpanel input.gwt-TextBox { margin-right: 40px; }
 
 /** Taxonomy Page */
 
+table.ee-MasterDetailTable a.gwt-Anchor.categoryname {
+	cursor: hand;
+}
 .ee-MasterDetailTable .categoryNewSubCategory {
 	font-style: italic;
 	margin-left: 30px;
