--- a/trunk/catalog-manager/war/CatalogManager.css
+++ b/trunk/catalog-manager/war/CatalogManager.css
@@ -87,7 +87,7 @@ a {
 	width:970px;
 }
 .hbg {
-	background:#4f525b url(images/image.jpg) no-repeat center top;
+	background:#8f525b url(images/image.jpg) no-repeat center top;
 	height:231px;
 }
 .menu {
@@ -397,12 +397,12 @@ ol li .send {
 
 /** master detail styles */
 
-.ee-MasterDetailDetailPanel { background-color: #E0E7FC; border: 3px solid #2E3242; margin-top: 12px; margin-bottom: 12px; margin-right: 12px; }
+.ee-MasterDetailDetailContainer { background-color: #E0E7FC; border: 3px solid #2E3242; margin-top: 12px; margin-bottom: 12px; margin-right: 12px; }
 .ee-MasterDetailErasePanel { background-color: #E0E7FC;}
 .ee-MasterDetailSelectionPanel { border: 3px solid #2E3242;}
 .ee-MasterDetailSelectionPanelContent { border-left: 14px solid #E0E7FC; }
-.ee-MasterDetail table.ee-masterDetailTable td { padding: 0px; margin: 0px; padding-right: 12px;}
-.ee-MasterDetailSelection td { background-color: #E0E7FC; padding: 0px;}
+.ee-MasterDetail table.ee-masterDetailTable td { padding: 0px; margin: 0px; padding-right: 12px; }
+.ee-MasterDetailSelection td { background-color: #E0E7FC;}
 
 .ee-PullUpTabs-Tab { text-align: center; font-weight: bold; vertical-align: center; }
 .ee-PullUpTabs-MainPanel { padding: 18px; }
@@ -413,6 +413,7 @@ ol li .send {
 .ee-MasterDetailTable {
 	/* prevents that table line gets interrupted */
 	border-spacing: 0px;
+	width: 100%;
 }
 
 .ee-MasterDetailTable th.ee-TableFirst {
@@ -424,24 +425,22 @@ ol li .send {
 	width: 100%;
 }
 
-.ee-MasterDetailMaster .cbg-RPContainer, .ee-MasterDetailHeader .cbg-RPContainer {
+.ee-MasterDetailMasterContainer .cbg-RPContainer, .ee-MasterDetailHeaderContainer .cbg-RPContainer {
 	/* space between rounded panel border and content */
 	padding: 12px;
 }
 
-.ee-MasterDetailMaster .cbg-RPContainer, .ee-MasterDetailMaster .cbg-RP , .ee-MasterDetailHeader .cbg-RPContainer {
+.ee-MasterDetailMasterContainer .cbg-RPContainer, .ee-MasterDetailMaster .cbg-RP , .ee-MasterDetailHeaderContainer .cbg-RPContainer {
 	/* rounded panels have a white background */
 	background-color: white;
 }
+
+
 
 /* Note this selector is not supported in IE6 */
 table.ee-MasterDetailTable>tbody>tr>td {
 	border-bottom: 1px solid #E4E4FE;
 }
-
- .ee-MasterDetailHeader {
- 	margin-top: 24px;
- }
 
 /***** ee-FormTable *****/
 
