git-svn-id: file:///var/svn/claro-catalog@654 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/war/CatalogManager.css
+++ b/trunk/catalog-manager/war/CatalogManager.css
@@ -815,6 +815,13 @@ table.ee-MasterDetailTable a.gwt-Anchor.categoryname {
 
 .masterdetailtest { padding: 5px;}
 
+
+/** Order Styles */
+
+.orderRibbon {
+	padding: 5px;
+}
+
 /** Import Styles */
 
 .ImportPage .ee-MasterDetailMaster td img {
