git-svn-id: file:///var/svn/claro-catalog@657 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/war/CatalogManager.css
+++ b/trunk/catalog-manager/war/CatalogManager.css
@@ -806,6 +806,7 @@ table.ee-MasterDetailTable a.gwt-Anchor.categoryname {
 	padding-bottom: 1px;
 	padding-left: 4px;
 	padding-right: 6px;
+	cursor: pointer;
 }
 .languageList .gwt-Label:hover {
 #	color: #DEE5F2;
