git-svn-id: file:///var/svn/claro-catalog@659 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/war/CatalogManager.css
+++ b/trunk/catalog-manager/war/CatalogManager.css
@@ -763,7 +763,8 @@ table.ee-MasterDetailTable a.gwt-Anchor.categoryname {
 
 /** Languages component */
 .languageStyle {
-	margin-left: 10px;
+	margin-left: 4px;
+	margin-right: 6px;
 }
 .languageStyle table {
 	border-spacing: 0px;
@@ -794,7 +795,7 @@ table.ee-MasterDetailTable a.gwt-Anchor.categoryname {
 }
 
 .languageStyle a.languageAdd {
-	margin-left: 10px;
+	margin-left: 6px;
 }
 
 .languageList .gwt-Label {
