git-svn-id: file:///var/svn/claro-catalog@672 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/war/CatalogManager.css
+++ b/trunk/catalog-manager/war/CatalogManager.css
@@ -596,6 +596,14 @@ table.filterpanel input.gwt-TextBox { margin-right: 40px; }
 	color: gray;
 }
 
+.categoryDetails .itemPropertyValues .valueParent.inherited .valueWidget input {
+	color: gray;
+}
+
+.categoryDetails .itemPropertyValues .valueParent.inherited .valueWidget {
+	color: gray;
+}
+
 .categoryDetails .itemPropertyValues .valueParent.overridden .valueWidget {
 	color: blue;
 }
