git-svn-id: file:///var/svn/claro-catalog@687 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/war/CatalogManager.css
+++ b/trunk/catalog-manager/war/CatalogManager.css
@@ -692,6 +692,13 @@ table.filterpanel input.gwt-TextBox { margin-right: 40px; }
 	visibility: visible;
 	color: gray;
 }
+.itemPropertyValues tr.itemPropertyValueRow .itemPropertyValueName {
+	white-space: nowrap;
+}
+
+.itemPropertyValues tr.itemPropertyValueRow .valueParentTD {
+	width: 100%;
+}	
 
 /** Taxonomy Page */
 
