git-svn-id: file:///var/svn/claro-catalog@723 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/war/CatalogManager.css
+++ b/trunk/catalog-manager/war/CatalogManager.css
@@ -908,4 +908,21 @@ table.ee-MasterDetailTable a.gwt-Anchor.categoryname {
 
 .ImportDataMappingPanel .ee-FormTable {
 	height: 80px;
-}	
+}
+
+
+/** shop */
+
+img.clear {
+	background:  url(images/closeButton2.png);
+	width: 14px;
+	height: 14px;
+	border: none;
+	
+}
+
+img.clear:hover {
+	background: url(images/closeButton3.png);
+	width: 14px;
+	height: 14px;
+}
