--- a/trunk/catalog-manager/war/CatalogManager.css
+++ b/trunk/catalog-manager/war/CatalogManager.css
@@ -343,9 +343,9 @@ ol li .send {
 	cursor: pointer;
 }
 
-/***** ee-Button *****/
+/***** eeButton *****/
 
-.ee-Button {
+.eeButton {
 	margin:0;
 	padding:0 0px 0 0;
 	float:left;
@@ -353,7 +353,7 @@ ol li .send {
 	background-color: transparent;
 	cursor: pointer;
 }
-.ee-Button div {
+.eeButton div {
 	display:block;
 	margin:0;
 	padding:0 0 0 3px;
@@ -361,13 +361,13 @@ ol li .send {
 	text-decoration:none;
 	background: transparent url(images/button-l.png) no-repeat left top;
 }
-.ee-Button div span {
+.eeButton div span {
 	display:block;
 	margin:0;
 	padding:0 3px 0 0;
 	background:transparent url(images/button-r.png) no-repeat right top;
 }
-.ee-Button div span span {
+.eeButton div span span {
 	display:block;
 	margin:0;
 	color: #444;
@@ -375,31 +375,31 @@ ol li .send {
 	background:transparent url(images/button-m.png) repeat-x top;
 }
 
-.ee-ButtonBar td {
+.eeButtonBar td {
 	padding-right: 12px !important;
 }
 
-.ee-ButtonBar td td {
+.eeButtonBar td td {
 	padding-right: 0px;
 }
 
 /***** TAB Button *****/
 
-.ee-PullUpTabs-Tab .ee-Button {
+.ee-PullUpTabs-Tab .eeButton {
 	width: 100%;
 }
 
-.ee-PullUpTabs-Tab .ee-Button div {
+.ee-PullUpTabs-Tab .eeButton div {
 	background: transparent url(images/tab-l.png) no-repeat left top;
 	padding:0 0 0 11px;
 }
 
-.ee-PullUpTabs-Tab .ee-Button div span {
+.ee-PullUpTabs-Tab .eeButton div span {
 	padding:0 11px 0 0;
 	background:transparent url(images/tab-r.png) no-repeat right top;
 }
 
-.ee-PullUpTabs-Tab .ee-Button div span span {
+.ee-PullUpTabs-Tab .eeButton div span span {
 	color: white;
 	font-weight: bold;
 	font-size: 9pt;
