git-svn-id: file:///var/svn/claro-catalog@739 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/catalog-manager/war/CatalogManager.css
+++ b/trunk/catalog-manager/war/CatalogManager.css
@@ -513,6 +513,7 @@ td.ee-FormTableHelp {
 /** catalogpage styles */
 
 .productMasterDetail .cbg-RPContainer { background-color: white; }
+.productMasterDetail table.ee-MasterDetailMaster { width: 100%; }
 .productMasterDetail table.ee-MasterDetailTable { width: 100%; }
 .productMasterDetail table.ee-MasterDetailTable tr.itemRowChanged td { font-style: italic; }
 .productMasterDetail table.ee-MasterDetailTable table.product { width: 100%; cursor: pointer;}
