git-svn-id: file:///var/svn/claro-catalog@749 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/templates/header.html
+++ b/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/templates/header.html
@@ -12,6 +12,13 @@
         &#160;<a href="/userinfo">settings</a>
         &#160;<webshop:logout-link>logout</webshop:logout-link>
         <object:none>
+  <webshop:shopping-cart>
+      <shopping-cart:items>
+<list:repeat />
+		  <shopping-cart:link><img src="/images/shoppingcart.gif"/></shopping-cart:link>
+      </shopping-cart:items>
+
+    </webshop:shopping-cart>
 		<a href="/login">Login</a> intranet
         </object:none>
        </webshop:current-user>
