git-svn-id: file:///var/svn/claro-catalog@751 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/templates/right_bar.html
+++ b/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/templates/right_bar.html
@@ -77,9 +77,10 @@
           </tr>
        </shopping-cart:total-prices>
         </table>
-		  <div class="order_status" >
+<!--		  <div class="order_status" >
 		    <div><shopping-cart:link><b><lift:loc>Shopping Cart</lift:loc> &gt;&gt;</b></shopping-cart:link></div>
 		  </div>
+-->
     <div class="button-bar">
 	<shopping-cart:link class="button">Order Now</shopping-cart:link>
     </div>
