git-svn-id: file:///var/svn/claro-catalog@759 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/templates/category_menu.html
+++ b/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/templates/category_menu.html
@@ -1,3 +1,9 @@
+<ul>
+<li>
+<a style="font-weight:bold;font-size:120%" href="/promotions">special offers</a>
+
+</li>
+</ul>
 <webshop:top-level-categories>
 	<ul>
 		<list:group>
