git-svn-id: file:///var/svn/claro-catalog@771 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/templates/right_bar.html
+++ b/trunk/TetterodeWebshop/src/main/resources/claro/tetterode/webshop/website/templates/right_bar.html
@@ -23,13 +23,13 @@
   <div class="side_bar_panel"> 
   	<template:include template="templates/filters"/>
   </div>
-  <cms:locales><list:plural>
+  <webshop:locales><list:plural>
   <hr/> 
   <div class="side_bar_panel loginpanel"> 
   <h1>Choose Language</h1>
   <list:repeat><locale:select-link><locale:short/> </locale:select-link></list:repeat>
   </div>
-  </list:plural></cms:locales>		  
+  </list:plural></webshop:locales>		  
   
   <hr/> 
 <!-- 
